remove none style (fixed on ie)

--- a/ClientApp/views/sample/uis/fixedtable/style.scss
+++ b/ClientApp/views/sample/uis/fixedtable/style.scss
@@ -58,8 +58,6 @@
     &.has-scroll-y {
         .fx-scroll-body {
             overflow-y: scroll;
-            -ms-overflow-y: scroll;
-            -ms-overflow-style: auto;
         }
         .fx-scroll-header {
             border-right: 1px solid #ddd;
@@ -72,8 +70,6 @@
         &.has-footer {
             .fx-scroll-footer {
                 overflow-x: scroll;
-                -ms-overflow-x: scroll;
-                -ms-overflow-style: auto;
             }
             .fx-fixed-footer {
                 border-bottom: 1px solid #ddd;
@@ -85,8 +81,6 @@
             }
             .fx-scroll-body {
                 overflow-x: scroll;
-                -ms-overflow-x: scroll;
-                -ms-overflow-style: auto;
             }
         }
     }
@@ -94,7 +88,6 @@
     .fx-row-body,
     .fx-row-footer {
         overflow: hidden;
-        -ms-overflow-style: none;
     }
     .fx-fixed-header,
     .fx-fixed-body,
@@ -104,7 +97,6 @@
     .fx-scroll-footer {
         float: left;
         overflow: hidden;
-        -ms-overflow-style: none;
     }
     /* custom style*/
     /*.fx-row-header {
